RELATED BRANCH: master; MESSAGE: gpq 3 setup

--- a/graph-ql/auth-graph-ql/package.json
+++ b/graph-ql/auth-graph-ql/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "Starter pack for an auth-included graphql project",
   "repository": {
-    "type": "git",
-    "url": "github.com/stephengrider"
+    "type": "git"
   },
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+	  "dev" : "nodemon -L index.js --ignore client"
   },
   "author": "",
   "license": "ISC",
