RELATED BRANCH: master; MESSAGE: in depth typescript pt8

--- a/typescript/project1/tsconfig.json
+++ b/typescript/project1/tsconfig.json
@@ -4,9 +4,10 @@
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": false,
-		"strictNullChecks" : true
+		"strictNullChecks" : true,
+		"experimentalDecorators" : true
 	},
-    "exclude": [
+	"exclude": [
         "node_modules"
     ]
 }
