--- a/typescript/course2/maps/package.json
+++ b/typescript/course2/maps/package.json
@@ -1,6 +1,6 @@
 {
-  "dependencies": {
-    "@types/faker": "^5.5.9",
-    "faker": "^5.5.3"
+  "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "typescript": "^4.6.4"
   }
 }
