--- a/typescript/course2/maps/package.json
+++ b/typescript/course2/maps/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@types/google.maps": "^3.48.7"
   }
 }
