--- a/typescript/course2/stats/package.json
+++ b/typescript/course2/stats/package.json
@@ -4,16 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start:build": "tsc -w",
-      "start:run": "nodemon build/index.js",
-      "start": "concurrently npm:start:*"
+        "start:build": "tsc -w",
+        "start:run": "nodemon build/index.js",
+        "start": "concurrently npm:start:*"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "concurrently": "^7.2.0",
-      "nodemon": "^2.0.16"
+        "@types/node": "^17.0.35",
+        "concurrently": "^7.2.0",
+        "nodemon": "^2.0.16"
     }
-  }
-  
+}
