Some progress has been made!

--- a/typescript/course2/webFramework/package.json
+++ b/typescript/course2/webFramework/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
+  },
+  "scripts": {
+      "start:db": "json-server -w db.json",
+      "start:parcel": "parcel index.html"
   }
 }
