--- a/typescript/course2/express/package.json
+++ b/typescript/course2/express/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^7.2.1",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "reflect-metadata": "^0.1.13"
   }
 }
