--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -23,7 +23,8 @@ jobs:
             - run: npm run build
 
             - uses: shinyinc/action-aws-cli@v1.2
-            - run: aws --region us-east-1 s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+            - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
               env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_DEFAULT_REGION: us-east-1
