Some progress has been made!

--- a/c-sharp/course1/BankingConsole/BankingConsole.AccessLayer/BankingConsole.DataAccess.csproj
+++ b/c-sharp/course1/BankingConsole/BankingConsole.AccessLayer/BankingConsole.DataAccess.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\BankingConsole.Entities\BankingConsole.Entities.csproj" />
     <ProjectReference Include="..\BankingConsole.Exceptions\BankingConsole.Exceptions.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
 </Project>
