--- a/c-sharp/course1/BankingConsole/BankingConsole.Entities/BankingConsole.Entities.csproj
+++ b/c-sharp/course1/BankingConsole/BankingConsole.Entities/BankingConsole.Entities.csproj
@@ -9,4 +9,10 @@
   <ItemGroup>
     <ProjectReference Include="..\BankingConsole.Exceptions\BankingConsole.Exceptions.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
 </Project>
