--- a/c-sharp/course1/BankingConsole/BankingConsole.BusinessLogicLayer/BankingConsole.BusinessLogic.csproj
+++ b/c-sharp/course1/BankingConsole/BankingConsole.BusinessLogicLayer/BankingConsole.BusinessLogic.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\BankingConsole.Exceptions\BankingConsole.Exceptions.csproj" />
     <ProjectReference Include="..\BankingConsole.AccessLayer\BankingConsole.DataAccess.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
 </Project>
